[package]
name = "rsweb-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["tracing"] }
axum-macros = "0.4"
tower-http = { version = "0.6", features = ["trace", "timeout", "cors"] }
tower = { version = "0.5" }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
test-log = "0.2"
anyhow = "1.0"
bcrypt = "0.16.0"
derive_builder = "0.20"
http-body-util = "0.1"
jsonwebtoken = "9"
futures-util = "0.3"
base64 = "0.22"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
xid = "1"
hyper-util = { version = "0.1", features = ["client-legacy"] }
ring = "0.17"
hex = "0.4"
regex = "1.10"
# matchit = "0.8"
# reqwest-middleware = "0.4"
# reqwest = { version = "0.12", features = [
#     "json",
#     "rustls-tls",
# ], default-features = false }
rand = { version = "0.8" }
validator = { version = "0.19", features = ["derive"] }
